# recommendation_engine

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
data/: df_test.csv  df_train.csv
notebooks/: movie_dataset.py  movies_data_prep.ipynb  movies_model_train.ipynb
